--- a/lab1/Part1_TensorFlow.ipynb
+++ b/lab1/Part1_TensorFlow.ipynb
@@ -91,10 +91,11 @@
         "id": "LkaimNJfYZ2w"
       },
       "source": [
-        "# Requires tensorflow version 2.x\n",
+        "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "\n",
-        "# Import the MIT Introduction to Deep Learning package\n",
+        "# Download and import the MIT Introduction to Deep Learning package\n",
+        "!pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl\n",
         "\n",
         "import numpy as np\n",
