--- a/lab1/solutions/Part1_TensorFlow_Solution.ipynb
+++ b/lab1/solutions/Part1_TensorFlow_Solution.ipynb
@@ -381,7 +381,7 @@
         "\n",
         "# test the output!\n",
         "print(y.numpy())\n",
-        "mdl.lab1.test_custom_dense_layer_output(y)"
+        "mdl.lab1.test_custom_dense_layer_output(layer,x_input,y)"
       ],
       "execution_count": null,
       "outputs": []
