--- a/lab1/solutions/Part1_TensorFlow_Solution.ipynb
+++ b/lab1/solutions/Part1_TensorFlow_Solution.ipynb
@@ -82,7 +82,7 @@
         "import tensorflow as tf\n",
         "\n",
         "# Download and import the MIT Introduction to Deep Learning package\n",
-        "!pip install mitdeeplearning\n",
+        "# !pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl\n",
         "\n",
         "import numpy as np\n",
