--- a/lab1/solutions/Part1_TensorFlow_Solution.ipynb
+++ b/lab1/solutions/Part1_TensorFlow_Solution.ipynb
@@ -78,7 +78,7 @@
         "id": "LkaimNJfYZ2w"
       },
       "source": [
-        "%tensorflow_version 2.x\n",
+        "# %tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "\n",
         "# Download and import the MIT Introduction to Deep Learning package\n",
