--- a/lab1/Part2_Music_Generation.ipynb
+++ b/lab1/Part2_Music_Generation.ipynb
@@ -903,10 +903,13 @@
         "  # Synthesize the waveform from a song\n",
         "  waveform = mdl.lab1.play_song(song)\n",
         "\n",
-        "  # If its a valid song (correct syntax), lets play it! \n",
+        "  # If it's a valid song (correct syntax), let's play it! \n",
         "  if waveform:\n",
-        "    print(\"Generated song\", i)\n",
-        "    ipythondisplay.display(waveform)"
+        "    print(\"Valid generated song saved: \", i)\n",
+        "    # ipythondisplay.display(waveform)",
+        "    break",
+        "  else:",
+        "    print(\"INVALID song: \", i)\n"
       ],
       "execution_count": null,
       "outputs": []
