--- a/lab1/Part2_Music_Generation.ipynb
+++ b/lab1/Part2_Music_Generation.ipynb
@@ -906,10 +906,10 @@
         "  # If it's a valid song (correct syntax), let's play it! \n",
         "  if waveform:\n",
         "    print(\"Valid generated song saved: \", i)\n",
-        "    # ipythondisplay.display(waveform)",
-        "    break",
-        "  else:",
-        "    print(\"INVALID song: \", i)\n"
+        "    # ipythondisplay.display(waveform)\n",
+        "    break\n",
+        "  else:\n",
+        "    print(\"INVALID song: \", i)"
       ],
       "execution_count": null,
       "outputs": []
