--- a/lab1/solutions/Part2_Music_Generation_Solution.ipynb
+++ b/lab1/solutions/Part2_Music_Generation_Solution.ipynb
@@ -924,13 +924,14 @@
         "generated_songs = mdl.lab1.extract_song_snippet(generated_text)\n",
         "\n",
         "for i, song in enumerate(generated_songs): \n",
-        "  # Synthesize the waveform from a song\n",
-        "  waveform = mdl.lab1.play_song(song)\n",
+        "  # Attempt to convert to a playable file\n",
+        "  ret = mdl.lab1.play_song(song)\n",
         "\n",
-        "  # If its a valid song (correct syntax), lets play it! \n",
-        "  if waveform:\n",
-        "    print(\"Generated song\", i)\n",
-        "    ipythondisplay.display(waveform)"
+        "  # Check if it's a valid song (correct syntax)\n",
+        "  if ret:\n",
+        "    print(\"VALID song: \", songname)\n",
+        "  else:\n",
+        "    print(\"INVALID song: \", songname)"
       ],
       "execution_count": null,
       "outputs": []
