--- a/lab1/Part2_Music_Generation.ipynb
+++ b/lab1/Part2_Music_Generation.ipynb
@@ -901,15 +901,14 @@
         "\n",
         "for i, song in enumerate(generated_songs): \n",
         "  # Synthesize the waveform from a song\n",
-        "  waveform = mdl.lab1.play_song(song)\n",
+        "  songname = "song{}".format(i)\n",
+        "  ret = mdl.lab1.play_song(song, songname)\n",
         "\n",
-        "  # If it's a valid song (correct syntax), let's play it! \n",
-        "  if waveform:\n",
-        "    print(\"Valid generated song saved: \", i)\n",
-        "    # ipythondisplay.display(waveform)\n",
-        "    break\n",
+        "  # Check if it's a valid song (correct syntax) \n",
+        "  if ret:\n",
+        "    print(\"VALID song: \", songname)\n",
         "  else:\n",
-        "    print(\"INVALID song: \", i)"
+        "    print(\"INVALID song: \", songname)"
       ],
       "execution_count": null,
       "outputs": []
