--- a/lab1/Part2_Music_Generation.ipynb
+++ b/lab1/Part2_Music_Generation.ipynb
@@ -900,8 +900,8 @@
         "generated_songs = mdl.lab1.extract_song_snippet(generated_text)\n",
         "\n",
         "for i, song in enumerate(generated_songs): \n",
-        "  # Synthesize the waveform from a song\n",
-        "  songname = "song{}".format(i)\n",
+        "  # Attempt to parse song and convert to MIDI\n",
+        "  songname = \"song{}\".format(i)\n",
         "  ret = mdl.lab1.play_song(song, songname)\n",
         "\n",
         "  # Check if it's a valid song (correct syntax) \n",
