--- a/lab1/solutions/Part2_Music_Generation_Solution.ipynb
+++ b/lab1/solutions/Part2_Music_Generation_Solution.ipynb
@@ -924,8 +924,9 @@
         "generated_songs = mdl.lab1.extract_song_snippet(generated_text)\n",
         "\n",
         "for i, song in enumerate(generated_songs): \n",
-        "  # Attempt to convert to a playable file\n",
-        "  ret = mdl.lab1.play_song(song)\n",
+        "  # Attempt to parse song and convert to MIDI\n",
+        "  songname = \"song{}\".format(i)\n",
+        "  ret = mdl.lab1.play_song(song, songname)\n",
         "\n",
         "  # Check if it's a valid song (correct syntax)\n",
         "  if ret:\n",
