--- a/lab1/solutions/Part2_Music_Generation_Solution.ipynb
+++ b/lab1/solutions/Part2_Music_Generation_Solution.ipynb
@@ -84,11 +84,9 @@
       },
       "source": [
         "# Import Tensorflow 2.0\n",
-        "%tensorflow_version 2.x\n",
+        "# %tensorflow_version 2.x\n",
         "import tensorflow as tf \n",
         "\n",
-        "# Download and import the MIT Introduction to Deep Learning package\n",
-        "!pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl\n",
         "\n",
         "# Import all remaining packages\n",
@@ -97,12 +95,7 @@
         "import time\n",
         "import functools\n",
         "from IPython import display as ipythondisplay\n",
-        "from tqdm import tqdm\n",
-        "!apt-get install abcmidi timidity > /dev/null 2>&1\n",
-        "\n",
-        "# Check that we are using a GPU, if not switch runtimes\n",
-        "#   using Runtime > Change Runtime Type > GPU\n",
-        "assert len(tf.config.list_physical_devices('GPU')) > 0"
+        "from tqdm import tqdm\n"
       ],
       "execution_count": null,
       "outputs": []
