Clean up Lab Part 1

--- a/lab2/Part1_MNIST.ipynb
+++ b/lab2/Part1_MNIST.ipynb
@@ -76,20 +76,15 @@
       },
       "source": [
         "# Import Tensorflow 2.0\n",
-        "%tensorflow_version 2.x\n",
+        "# %tensorflow_version 2.x\n",
         "import tensorflow as tf \n",
         "\n",
-        "!pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import random\n",
-        "from tqdm import tqdm\n",
-        "\n",
-        "# Check that we are using a GPU, if not switch runtimes\n",
-        "#   using Runtime > Change Runtime Type > GPU\n",
-        "assert len(tf.config.list_physical_devices('GPU')) > 0"
+        "from tqdm import tqdm\n"
       ],
       "execution_count": null,
       "outputs": []
