--- a/lab2/Part2_FaceDetection.ipynb
+++ b/lab2/Part2_FaceDetection.ipynb
@@ -76,7 +76,7 @@
       "outputs": [],
       "source": [
         "# Import Tensorflow 2.0\n",
-        "%tensorflow_version 2.x\n",
+        "# %tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "\n",
         "import IPython\n",
@@ -85,9 +85,6 @@
         "import numpy as np\n",
         "from tqdm import tqdm\n",
         "\n",
-        "\n",
-        "# Download and import the MIT Introduction to Deep Learning package\n",
-        "!pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl"
       ]
     },
