--- a/lab2/solutions/Part2_FaceDetection_Solution.ipynb
+++ b/lab2/solutions/Part2_FaceDetection_Solution.ipynb
@@ -75,7 +75,7 @@
       "outputs": [],
       "source": [
         "# Import Tensorflow 2.0\n",
-        "%tensorflow_version 2.x\n",
+        "# %tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "\n",
         "import IPython\n",
@@ -84,9 +84,6 @@
         "import numpy as np\n",
         "from tqdm import tqdm\n",
         "\n",
-        "\n",
-        "# Download and import the MIT Introduction to Deep Learning package\n",
-        "!pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl"
       ]
     },
