--- a/lab2/Part1_MNIST.ipynb
+++ b/lab2/Part1_MNIST.ipynb
@@ -586,13 +586,17 @@
         "id": "HV5jw-5HwSmO"
       },
       "source": [
-        "#@title Change the slider to look at the model's predictions! { run: \"auto\" }\n",
+        "# Change the slider to look at the model's predictions!\n",
         "\n",
-        "image_index = 79 #@param {type:\"slider\", min:0, max:100, step:1}\n",
-        "plt.subplot(1,2,1)\n",
-        "mdl.lab2.plot_image_prediction(image_index, predictions, test_labels, test_images)\n",
-        "plt.subplot(1,2,2)\n",
-        "mdl.lab2.plot_value_prediction(image_index, predictions,  test_labels)"
+        "image_index = 0\n",
+        "@interact(new_image_index = (0, 100, 1))\n",
+        "def update_image_index(new_image_index = 79):\n",
+        "    global image_index \n",
+        "    image_index = new_image_index\n",
+        "    plt.subplot(1,2,1)\n",
+        "    mdl.lab2.plot_image_prediction(image_index, predictions, test_labels, test_images)\n",
+        "    plt.subplot(1,2,2)\n",
+        "    mdl.lab2.plot_value_prediction(image_index, predictions, test_labels)"
       ],
       "execution_count": null,
       "outputs": []
