--- a/lab2/Part1_MNIST.ipynb
+++ b/lab2/Part1_MNIST.ipynb
@@ -84,7 +84,10 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import random\n",
-        "from tqdm import tqdm\n"
+        "from tqdm import tqdm\n",
+        "\n",
+        "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+        "import ipywidgets as widgets\n"
       ],
       "execution_count": null,
       "outputs": []
