--- a/lab2/Part2_FaceDetection.ipynb
+++ b/lab2/Part2_FaceDetection.ipynb
@@ -85,7 +85,10 @@
         "import numpy as np\n",
         "from tqdm import tqdm\n",
         "\n",
-        "import mitdeeplearning as mdl"
+        "import mitdeeplearning as mdl\n",
+        "\n",
+        "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+        "import ipywidgets as widgets"
       ]
     },
     {
