Add sliders to lab 2 part 2

--- a/lab2/Part2_FaceDetection.ipynb
+++ b/lab2/Part2_FaceDetection.ipynb
@@ -162,24 +162,33 @@
       },
       "outputs": [],
       "source": [
-        "#@title Change the sliders to look at positive and negative training examples! { run: \"auto\" }\n",
+        "# Change the sliders to look at positive and negative training examples!\n",
         "\n",
         "### Examining the CelebA training dataset ###\n",
         "\n",
         "face_images = images[np.where(labels==1)[0]]\n",
         "not_face_images = images[np.where(labels==0)[0]]\n",
         "\n",
-        "idx_face = 19 #@param {type:\"slider\", min:0, max:50, step:1}\n",
-        "idx_not_face = 8 #@param {type:\"slider\", min:0, max:50, step:1}\n",
+        "idx_face = 0\n",
+        "idx_not_face = 0\n",
         "\n",
         "plt.figure(figsize=(8,4))\n",
-        "plt.subplot(1, 2, 1)\n",
-        "plt.imshow(face_images[idx_face])\n",
-        "plt.title(\"Face\"); plt.grid(False)\n",
         "\n",
-        "plt.subplot(1, 2, 2)\n",
-        "plt.imshow(not_face_images[idx_not_face])\n",
-        "plt.title(\"Not Face\"); plt.grid(False)"
+        "@interact(new_idx_face = (0, 50, 1))\n", 
+        "def update_idx_face(new_idx_face = 19):\n",
+        "    global idx_face\n",
+        "    idx_face = new_idx_face\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    plt.imshow(face_images[idx_face])\n",
+        "    plt.title(\"Face\"); plt.grid(False)\n",
+        "\n",
+        "@interact(new_idx_not_face = (0, 50, 1))\n", 
+        "def update_idx_not_face(new_idx_not_face = 8):\n",
+        "    global idx_not_face\n",
+        "    idx_not_face = new_idx_not_face\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    plt.imshow(not_face_images[idx_not_face])\n",
+        "    plt.title(\"Not Face\"); plt.grid(False)"
       ]
     },
     {
