--- a/lab2/solutions/Part2_FaceDetection_Solution.ipynb
+++ b/lab2/solutions/Part2_FaceDetection_Solution.ipynb
@@ -937,35 +937,40 @@
       "source": [
         "### Inspect different latent features\n",
         "\n",
-        "#@title Change the sliders to inspect different latent features! { run: \"auto\" }\n",
-        "idx_latent = 8 #@param {type:\"slider\", min:0, max:31, step:1}\n",
-        "num_steps = 15\n",
+        "# Change the sliders to inspect different latent features!0\n",
+        "idx_latent = 0\n",
         "\n",
-        "# Extract all latent samples from the desired dimension\n",
-        "latent_samples = z_mean[:, idx_latent]\n",
+        "@interact(new_idx_latent = (0, 31, 1))\n", 
+        "def update_idx_latent(new_idx_latent = 8):\n",
+        "    global idx_latent\n",
+        "    idx_latent = new_idx_latent\n",
+        "    num_steps = 15\n",
         "\n",
-        "# Compute their density and plot\n",
-        "density, latent_bins = np.histogram(latent_samples, num_steps, density=True)\n",
-        "fig, ax = plt.subplots(2, 1, figsize=(15, 4))\n",
-        "ax[0].bar(latent_bins[1:], density)\n",
-        "ax[0].set_ylabel(\"Data density\")\n",
+        "    # Extract all latent samples from the desired dimension\n",
+        "    latent_samples = z_mean[:, idx_latent]\n",
         "\n",
-        "# Visualize reconstructions as we walk across the latent space\n",
-        "latent_steps = np.linspace(np.min(latent_samples), np.max(latent_samples), num_steps)\n",
-        "baseline_latent = tf.reduce_mean(z_mean, 0, keepdims=True)\n",
+        "    # Compute their density and plot\n",
+        "    density, latent_bins = np.histogram(latent_samples, num_steps, density=True)\n",
+        "    fig, ax = plt.subplots(2, 1, figsize=(15, 4))\n",
+        "    ax[0].bar(latent_bins[1:], density)\n",
+        "    ax[0].set_ylabel(\"Data density\")\n",
         "\n",
-        "recons = []\n",
-        "for step in latent_steps: \n",
-        "  # Adjust the latent vector according to our step\n",
-        "  latent = baseline_latent.numpy()\n",
-        "  latent[0, idx_latent] = step\n",
-        "  # Decode the reconstruction and store\n",
-        "  recons.append(ss_vae.decode(latent)[0])\n",
+        "    # Visualize reconstructions as we walk across the latent space\n",
+        "    latent_steps = np.linspace(np.min(latent_samples), np.max(latent_samples), num_steps)\n",
+        "    baseline_latent = tf.reduce_mean(z_mean, 0, keepdims=True)\n",
         "\n",
-        "# Visualize all of the reconstructions!\n",
-        "ax[1].imshow(mdl.util.create_grid_of_images(recons, (1, num_steps)))\n",
-        "ax[1].set_xlabel(\"Latent step\")\n",
-        "ax[1].set_ylabel(\"Visualization\");\n"
+        "    recons = []\n",
+        "    for step in latent_steps: \n",
+        "      # Adjust the latent vector according to our step\n",
+        "      latent = baseline_latent.numpy()\n",
+        "      latent[0, idx_latent] = step\n",
+        "      # Decode the reconstruction and store\n",
+        "      recons.append(ss_vae.decode(latent)[0])\n",
+        "\n",
+        "    # Visualize all of the reconstructions!\n",
+        "    ax[1].imshow(mdl.util.create_grid_of_images(recons, (1, num_steps)))\n",
+        "    ax[1].set_xlabel(\"Latent step\")\n",
+        "    ax[1].set_ylabel(\"Visualization\");\n"
       ],
       "metadata": {
         "id": "8qcR9uvfCJku",
