--- a/lab2/Part2_FaceDetection.ipynb
+++ b/lab2/Part2_FaceDetection.ipynb
@@ -931,7 +931,7 @@
       "source": [
         "### Inspect different latent features\n",
         "\n",
-        "# Change the sliders to inspect different latent features!0\n",
+        "# Change the sliders to inspect different latent features!\n",
         "idx_latent = 0\n",
         "\n",
         "@interact(new_idx_latent = (0, 31, 1))\n", 
