--- a/lab2/solutions/Part2_FaceDetection_Solution.ipynb
+++ b/lab2/solutions/Part2_FaceDetection_Solution.ipynb
@@ -939,12 +939,13 @@
         "\n",
         "# Change the sliders to inspect different latent features!\n",
         "idx_latent = 0\n",
+        "num_steps = 15\n",
         "\n",
         "@interact(new_idx_latent = (0, 31, 1))\n", 
         "def update_idx_latent(new_idx_latent = 8):\n",
         "    global idx_latent\n",
         "    idx_latent = new_idx_latent\n",
-        "    num_steps = 15\n",
+        "    global num_steps\n",
         "\n",
         "    # Extract all latent samples from the desired dimension\n",
         "    latent_samples = z_mean[:, idx_latent]\n",
