use Adagrad optimizer

--- a/lab2/solutions/Part2_FaceDetection_Solution.ipynb
+++ b/lab2/solutions/Part2_FaceDetection_Solution.ipynb
@@ -283,7 +283,8 @@
         "num_epochs = 2  # keep small to run faster\n",
         "learning_rate = 5e-4\n",
         "\n",
-        "optimizer = tf.keras.optimizers.Adam(learning_rate) # define our optimizer\n",
+        "# optimizer = tf.keras.optimizers.Adam(learning_rate) # define our optimizer\n",
+        "optimizer = tf.keras.optimizers.Adagrad(learning_rate) # more stable on PVC\n",
         "loss_history = mdl.util.LossHistory(smoothing_factor=0.99) # to record loss evolution\n",
         "plotter = mdl.util.PeriodicPlotter(sec=2, scale='semilogy')\n",
         "if hasattr(tqdm, '_instances'): tqdm._instances.clear() # clear if it exists\n",
