pass training=True to model.call method

--- a/lab2/Part2_FaceDetection.ipynb
+++ b/lab2/Part2_FaceDetection.ipynb
@@ -281,7 +281,8 @@
         "def standard_train_step(x, y):\n",
         "  with tf.GradientTape() as tape:\n",
         "    # feed the images into the model\n",
-        "    logits = standard_classifier(x) \n",
+        "    # Note that we need to set training=True for BatchNormalization layers to work correctly\n",
+        "    logits = standard_classifier(x, training=True) \n",
         "    # Compute the loss\n",
         "    loss = tf.nn.sigmoid_cross_entropy_with_logits(labels=y, logits=logits)\n",
         "\n",
@@ -627,8 +628,6 @@
         "\n",
         "  # Functionally define the different layer types we will use\n",
         "  Conv2DTranspose = functools.partial(tf.keras.layers.Conv2DTranspose, padding='same', activation='relu')\n",
-        "  BatchNormalization = tf.keras.layers.BatchNormalization\n",
-        "  Flatten = tf.keras.layers.Flatten\n",
         "  Dense = functools.partial(tf.keras.layers.Dense, activation='relu')\n",
         "  Reshape = tf.keras.layers.Reshape\n",
         "\n",
@@ -678,13 +677,14 @@
         "    num_encoder_dims = 2*self.latent_dim + 1\n",
         "\n",
         "    self.encoder = make_standard_classifier(num_encoder_dims)\n",
+        "    self.encoder.train = functools.partial(self.encoder, training=True)\n",
         "    self.decoder = make_face_decoder_network()\n",
         "\n",
         "  # function to feed images into encoder, encode the latent space, and output\n",
         "  #   classification probability \n",
         "  def encode(self, x):\n",
         "    # encoder output\n",
-        "    encoder_output = self.encoder(x)\n",
+        "    encoder_output = self.encoder.train(x)\n",
         "\n",
         "    # classification prediction\n",
         "    y_logit = tf.expand_dims(encoder_output[:, 0], -1)\n",
