training fix lab 2 part 2
Add training=True fixes to solutions

--- a/lab2/solutions/Part2_FaceDetection_Solution.ipynb
+++ b/lab2/solutions/Part2_FaceDetection_Solution.ipynb
@@ -293,7 +293,8 @@
         "def standard_train_step(x, y):\n",
         "  with tf.GradientTape() as tape:\n",
         "    # feed the images into the model\n",
-        "    logits = standard_classifier(x) \n",
+        "    # Note that we need to set training=True for BatchNormalization layers to work correctly\n",
+        "    logits = standard_classifier(x, training=True) \n",
         "    # Compute the loss\n",
         "    loss = tf.nn.sigmoid_cross_entropy_with_logits(labels=y, logits=logits)\n",
         "\n",
