--- a/lab2/Part2_FaceDetection.ipynb
+++ b/lab2/Part2_FaceDetection.ipynb
@@ -85,10 +85,7 @@
         "import numpy as np\n",
         "from tqdm import tqdm\n",
         "\n",
-        "import mitdeeplearning as mdl\n",
-        "\n",
-        "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-        "import ipywidgets as widgets"
+        "import mitdeeplearning as mdl"
       ]
     },
     {
@@ -162,33 +159,24 @@
       },
       "outputs": [],
       "source": [
-        "# Change the sliders to look at positive and negative training examples!\n",
+        "#@title Change the sliders to look at positive and negative training examples! { run: \"auto\" }\n",
         "\n",
         "### Examining the CelebA training dataset ###\n",
         "\n",
         "face_images = images[np.where(labels==1)[0]]\n",
         "not_face_images = images[np.where(labels==0)[0]]\n",
         "\n",
-        "idx_face = 0\n",
-        "idx_not_face = 0\n",
+        "idx_face = 19 #@param {type:\"slider\", min:0, max:50, step:1}\n",
+        "idx_not_face = 8 #@param {type:\"slider\", min:0, max:50, step:1}\n",
         "\n",
         "plt.figure(figsize=(8,4))\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.imshow(face_images[idx_face])\n",
+        "plt.title(\"Face\"); plt.grid(False)\n",
         "\n",
-        "@interact(new_idx_face = (0, 50, 1))\n", 
-        "def update_idx_face(new_idx_face = 19):\n",
-        "    global idx_face\n",
-        "    idx_face = new_idx_face\n",
-        "    plt.subplot(1, 2, 1)\n",
-        "    plt.imshow(face_images[idx_face])\n",
-        "    plt.title(\"Face\"); plt.grid(False)\n",
-        "\n",
-        "@interact(new_idx_not_face = (0, 50, 1))\n", 
-        "def update_idx_not_face(new_idx_not_face = 8):\n",
-        "    global idx_not_face\n",
-        "    idx_not_face = new_idx_not_face\n",
-        "    plt.subplot(1, 2, 2)\n",
-        "    plt.imshow(not_face_images[idx_not_face])\n",
-        "    plt.title(\"Not Face\"); plt.grid(False)"
+        "plt.subplot(1, 2, 2)\n",
+        "plt.imshow(not_face_images[idx_not_face])\n",
+        "plt.title(\"Not Face\"); plt.grid(False)"
       ]
     },
     {
@@ -293,7 +281,8 @@
         "def standard_train_step(x, y):\n",
         "  with tf.GradientTape() as tape:\n",
         "    # feed the images into the model\n",
-        "    logits = standard_classifier(x) \n",
+        "    # Note that we need to set training=True for BatchNormalization layers to work correctly\n",
+        "    logits = standard_classifier(x, training=True) \n",
         "    # Compute the loss\n",
         "    loss = tf.nn.sigmoid_cross_entropy_with_logits(labels=y, logits=logits)\n",
         "\n",
@@ -639,8 +628,6 @@
         "\n",
         "  # Functionally define the different layer types we will use\n",
         "  Conv2DTranspose = functools.partial(tf.keras.layers.Conv2DTranspose, padding='same', activation='relu')\n",
-        "  BatchNormalization = tf.keras.layers.BatchNormalization\n",
-        "  Flatten = tf.keras.layers.Flatten\n",
         "  Dense = functools.partial(tf.keras.layers.Dense, activation='relu')\n",
         "  Reshape = tf.keras.layers.Reshape\n",
         "\n",
@@ -690,13 +677,14 @@
         "    num_encoder_dims = 2*self.latent_dim + 1\n",
         "\n",
         "    self.encoder = make_standard_classifier(num_encoder_dims)\n",
+        "    self.encoder.train = functools.partial(self.encoder, training=True)\n",
         "    self.decoder = make_face_decoder_network()\n",
         "\n",
         "  # function to feed images into encoder, encode the latent space, and output\n",
         "  #   classification probability \n",
         "  def encode(self, x):\n",
         "    # encoder output\n",
-        "    encoder_output = self.encoder(x)\n",
+        "    encoder_output = self.encoder.train(x)\n",
         "\n",
         "    # classification prediction\n",
         "    y_logit = tf.expand_dims(encoder_output[:, 0], -1)\n",
@@ -931,41 +919,35 @@
       "source": [
         "### Inspect different latent features\n",
         "\n",
-        "# Change the sliders to inspect different latent features!\n",
-        "idx_latent = 0\n",
+        "#@title Change the sliders to inspect different latent features! { run: \"auto\" }\n",
+        "idx_latent = 8 #@param {type:\"slider\", min:0, max:31, step:1}\n",
         "num_steps = 15\n",
         "\n",
-        "@interact(new_idx_latent = (0, 31, 1))\n", 
-        "def update_idx_latent(new_idx_latent = 8):\n",
-        "    global idx_latent\n",
-        "    idx_latent = new_idx_latent\n",
-        "    global num_steps\n",
+        "# Extract all latent samples from the desired dimension\n",
+        "latent_samples = z_mean[:, idx_latent]\n",
         "\n",
-        "    # Extract all latent samples from the desired dimension\n",
-        "    latent_samples = z_mean[:, idx_latent]\n",
+        "# Compute their density and plot\n",
+        "density, latent_bins = np.histogram(latent_samples, num_steps, density=True)\n",
+        "fig, ax = plt.subplots(2, 1, figsize=(15, 4))\n",
+        "ax[0].bar(latent_bins[1:], density)\n",
+        "ax[0].set_ylabel(\"Data density\")\n",
         "\n",
-        "    # Compute their density and plot\n",
-        "    density, latent_bins = np.histogram(latent_samples, num_steps, density=True)\n",
-        "    fig, ax = plt.subplots(2, 1, figsize=(15, 4))\n",
-        "    ax[0].bar(latent_bins[1:], density)\n",
-        "    ax[0].set_ylabel(\"Data density\")\n",
+        "# Visualize reconstructions as we walk across the latent space\n",
+        "latent_steps = np.linspace(np.min(latent_samples), np.max(latent_samples), num_steps)\n",
+        "baseline_latent = tf.reduce_mean(z_mean, 0, keepdims=True)\n",
         "\n",
-        "    # Visualize reconstructions as we walk across the latent space\n",
-        "    latent_steps = np.linspace(np.min(latent_samples), np.max(latent_samples), num_steps)\n",
-        "    baseline_latent = tf.reduce_mean(z_mean, 0, keepdims=True)\n",
+        "recons = []\n",
+        "for step in latent_steps: \n",
+        "  # Adjust the latent vector according to our step\n",
+        "  latent = baseline_latent.numpy()\n",
+        "  latent[0, idx_latent] = step\n",
+        "  # Decode the reconstruction and store\n",
+        "  recons.append(ss_vae.decode(latent)[0])\n",
         "\n",
-        "    recons = []\n",
-        "    for step in latent_steps: \n",
-        "      # Adjust the latent vector according to our step\n",
-        "      latent = baseline_latent.numpy()\n",
-        "      latent[0, idx_latent] = step\n",
-        "      # Decode the reconstruction and store\n",
-        "      recons.append(ss_vae.decode(latent)[0])\n",
-        "\n",
-        "    # Visualize all of the reconstructions!\n",
-        "    ax[1].imshow(mdl.util.create_grid_of_images(recons, (1, num_steps)))\n",
-        "    ax[1].set_xlabel(\"Latent step\")\n",
-        "    ax[1].set_ylabel(\"Visualization\");\n"
+        "# Visualize all of the reconstructions!\n",
+        "ax[1].imshow(mdl.util.create_grid_of_images(recons, (1, num_steps)))\n",
+        "ax[1].set_xlabel(\"Latent step\")\n",
+        "ax[1].set_ylabel(\"Visualization\");\n"
       ]
     },
     {
