--- a/lab2/solutions/Part2_FaceDetection_Solution.ipynb
+++ b/lab2/solutions/Part2_FaceDetection_Solution.ipynb
@@ -700,13 +700,14 @@
         "    num_encoder_dims = 2*self.latent_dim + 1\n",
         "\n",
         "    self.encoder = make_standard_classifier(num_encoder_dims)\n",
+        "    self.encoder.train = functools.partial(self.encoder, training=True)\n",
         "    self.decoder = make_face_decoder_network()\n",
         "\n",
         "  # function to feed images into encoder, encode the latent space, and output\n",
         "  #   classification probability \n",
         "  def encode(self, x):\n",
         "    # encoder output\n",
-        "    encoder_output = self.encoder(x)\n",
+        "    encoder_output = self.encoder.train(x)\n",
         "\n",
         "    # classification prediction\n",
         "    y_logit = tf.expand_dims(encoder_output[:, 0], -1)\n",
